tiptap extensions: fix text overflow (#4134)

--- a/packages/plugin-headings/web/statics/styles/headings.scss
+++ b/packages/plugin-headings/web/statics/styles/headings.scss
@@ -31,3 +31,9 @@
     }
   }
 }
+
+.text-wrapper {
+  display: inline-block;
+  overflow-wrap: anywhere;
+}
+
